[project]
name = "pkglink_integration_pkg"
description = ""
authors = [{ name = "hotdog-werx" }]
readme = "README.md"
license = 'MIT'
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
  'pydantic>=2.0.0',
]

[project.scripts]
test-cli = "pkglink_integration_pkg.main:main"

[dependency-groups]
dev = [
]

[tool.hatch]
build.packages = ["pkglink_integration_pkg"]
metadata.allow-direct-references = true
version.path = 'pkglink_integration_pkg/version.py'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
